--- a/src/pages/testing/defects/advisory-details/advisory-details.scss
+++ b/src/pages/testing/defects/advisory-details/advisory-details.scss
@@ -1,7 +1,7 @@
 page-advisory-details {
   ion-content {
     .scroll-content {
-      background-color: $color-grey-3;
+      background-color: $content-background-color;
     }
   }
   .advisory__item-status {
