--- a/src/pages/testing/defects/advisory-details/advisory-details.scss
+++ b/src/pages/testing/defects/advisory-details/advisory-details.scss
@@ -6,7 +6,7 @@ page-advisory-details {
   }
   .advisory__item-status {
     font-weight: bold;
-    font-size: 21px;
+    font-size: $font-size-medium-2;
   }
 
   .advisory_item-name {
